# sipnPlay-ICP

./: .gitignore  AdminDevelopmentConfig.js  Cargo.toml  README.md  canbench.yml  canister_ids.json  deploy.sh  deploy_token.sh  dfx.json  package-lock.json  package.json  tsconfig.json
src/playsipnPlay-ICP-frontend/: package.json  tailwind.config.js  vite.config.js
src/playsipnPlay-ICP-frontend/public/.well-known/: walletconnect.txt
src/playsipnPlay-ICP-frontend/public/blackjack/: index.html
src/playsipnPlay-ICP-frontend/public/blocktap/: data.json  index.html  offline.json
src/playsipnPlay-ICP-frontend/public/blocktap_v2/: appmanifest.json  data.json  index.html  offline.json
src/playsipnPlay-ICP-frontend/public/bubble/: appmanifest.json  data.json  index.html  offline.json
src/playsipnPlay-ICP-frontend/public/gush/: debug.js  entry.js  index.html  input.js  state.js  style.css  ui.js
src/playsipnPlay-ICP-frontend/public/off-the-line/: index.html
src/playsipnPlay-ICP-frontend/public/tetris/: index.html  tetris.html
src/playsipnPlay-ICP-frontend/src/: AllRoutes.jsx  App.jsx  index.scss  main.jsx
src/playsipnPlay-ICP-frontend/src/.well-known/: ic-domains
src/playsipnPlay-ICP-frontend/src/Layout/: PrivateLayout.jsx
src/playsipnPlay-ICP-frontend/src/Pages/: Admin.jsx  BlackJack.jsx  BlockTap.jsx  Gush.jsx  Home.jsx  InfinityBubble.jsx  NotFound.jsx  OffTheLine.jsx  Tetris.jsx
src/playsipnPlay-ICP-frontend/src/common/: AnimationButton.jsx  HeaderButton.jsx
src/sipnPlay-ICP-backend/: Cargo.toml  sipnPlay-ICP-backend.did
src/sipnPlay-ICP-backend/src/: ICRC.mo  Types.mo  Utils.mo  api_query.rs  api_update.rs  canister_id.mo  lib.rs  main.mo  state_handler.rs  types.rs
src/sipnPlay-ICP-blackjack/: index.html  package.json
src/sipnPlay-ICP-blackjack/public/: blackjack.html
src/sipnPlay-ICP-blackjack/src/: App.jsx
src/sipnPlay-ICP-frontend/: index.html  package.json  tailwind.config.js  vite.config.js
src/sipnPlay-ICP-frontend/src/: AllRoutes.jsx  App.jsx  index.scss  main.jsx
src/sipnplay_icp_backend/: Cargo.toml  config.yaml  sipnplay_icp_backend.did
src/sipnplay_icp_backend/src/: api_query.rs  api_update.rs  config.rs  lib.rs  state_handler.rs  types.rs
(+129 files in other folders)
