[package]
name = "sipnPlay-ICP-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1.0.160", features = ["derive"] }  
base64 = "0.13.0"
candid = "0.10"
ic-cdk = "0.16.0"
ic-cdk-timers = "0.10.0" # Feel free to remove this dependency if you don't need timers
serde_bytes = "0.11.14"
serde_json = "1.0"
icrc-ledger-types = "0.1.6"
ic-ledger-types = "0.14.0"
dotenv = "0.15.0"
ic-stable-structures = "0.6.5"
num-traits = "0.2.19"
num-bigint = "0.4.6"