[package]
name = "sipnplay_icp_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
candid = "0.10"
ic-cdk = "0.16.0"
ic-cdk-timers = "0.7" # Feel free to remove this dependency if you don't need timers\
serde_bytes = "0.11.14"
serde_json = "1.0"
icrc-ledger-types = "0.1.6"
ic-ledger-types = "0.14.0"
dotenv = "0.15.0"
ic-stable-structures = "0.6.5"
num-traits = "0.2.19"
num-bigint = "0.4.6"
aes = "0.7"
block-modes = "0.8"  # Correct crate name
base64 = "0.21"
serde_yaml = "0.8"
ic-cdk-macros = "0.17.0"
serde_cbor = "0.11"
canbench-rs = { version = "0.1.8", optional = true }

[feature]
canbench-rs = { version = "0.1.8", optional = true }

